--- a/mayan/apps/authentication/locale/cs/LC_MESSAGES/django.po
+++ b/mayan/apps/authentication/locale/cs/LC_MESSAGES/django.po
@@ -4,16 +4,16 @@
 # 
 # Translators:
 # Translators:
-# trendspotter <jirka.p@volny.cz>, 2022
 # Michal Švábík <snadno@lehce.cz>, 2022
+# trendspotter <jirka.p@volny.cz>, 2022
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: Mayan EDMS\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-02-05 10:35+0000\n"
+"POT-Creation-Date: 2022-02-11 08:39+0000\n"
 "PO-Revision-Date: 2022-02-03 10:12+0000\n"
-"Last-Translator: Michal Švábík <snadno@lehce.cz>, 2022\n"
+"Last-Translator: trendspotter <jirka.p@volny.cz>, 2022\n"
 "Language-Team: Czech (https://www.transifex.com/rosarior/teams/13584/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -156,7 +156,7 @@ msgstr "E-mail pro resetování hesla byl odeslán!"
 
 #: views/authentication_views.py:153 views/authentication_views.py:287
 msgid "Next"
-msgstr ""
+msgstr "Další"
 
 #: views/authentication_views.py:159 views/authentication_views.py:293
 #, python-format
